<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/user_avatar"
            android:transitionName="@string/rounded_color_view_transition" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/avatar"
            android:padding="10dp"
            android:text="@string/test_user_name"
            android:textColor="#000000"
            android:textSize="22sp"
            android:transitionName="@string/username_transition" />
    </RelativeLayout>

</android.support.v7.widget.CardView>